--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Support Throughput Charts</title>
+  <title>Core Support Throughput Charts</title>
   <script src="https://unpkg.com/react@18.2.0/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.production.min.js"></script>
   <script src="https://unpkg.com/prop-types@15.8.1/prop-types.min.js"></script>
@@ -101,8 +101,10 @@ function App() {
 
     el('div', { style:{ borderLeft:"3px solid #f0c27f", paddingLeft:16, marginBottom:36 } },
       el('p', { style:{ fontSize:10, letterSpacing:"0.2em", textTransform:"uppercase", color:"#f0c27f", marginBottom:4 } }, "Sprint Analytics"),
-      el('h1', { style:{ fontSize:28, fontWeight:700, fontFamily:"Fraunces, serif", margin:0 } }, "Support Throughput"),
-      el('p', { style:{ fontSize:12, color:"#7a859e", marginTop:4 } }, "V1 – W3 · 29 sprints")
+      el('h1', { style:{ fontSize:28, fontWeight:700, fontFamily:"Fraunces, serif", margin:0 } }, "Core Support Ticket Throughput"),
+      el('p', { style:{ fontSize:12, color:"#7a859e", marginTop:4 } }, "2025-2026)
+    ),
+            el('p', { style:{ fontSize:12, color:"#7a859e", marginTop:4 } }, "V1 – W3 · 29 sprints")
     ),
 
     el('div', { style:{ display:"flex", gap:8, marginBottom:28, flexWrap:"wrap" } },
