--- a/index.html
+++ b/index.html
@@ -102,9 +102,8 @@ function App() {
     el('div', { style:{ borderLeft:"3px solid #f0c27f", paddingLeft:16, marginBottom:36 } },
       el('p', { style:{ fontSize:10, letterSpacing:"0.2em", textTransform:"uppercase", color:"#f0c27f", marginBottom:4 } }, "Sprint Analytics"),
       el('h1', { style:{ fontSize:28, fontWeight:700, fontFamily:"Fraunces, serif", margin:0 } }, "Core Support Ticket Throughput"),
-      el('p', { style:{ fontSize:12, color:"#7a859e", marginTop:4 } }, "2025-2026")
-    ),
-            el('p', { style:{ fontSize:12, color:"#7a859e", marginTop:4 } }, "V1 – W3 · 29 sprints")
+  el('p', { style:{ fontSize:12, color:"#7a859e", marginTop:4 } }, "2025-2026"),
+      el('p', { style:{ fontSize:12, color:"#7a859e", marginTop:4 } }, "V1 – W3 · 29 sprints")
     ),
 
     el('div', { style:{ display:"flex", gap:8, marginBottom:28, flexWrap:"wrap" } },
